data/derived/sp14/progs/unify/prog3188.ml.out
Characters 258-273:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type
         (int * int list) * int list list
       Type int list is not compatible with type int * int list 
